--- a/Portfolio/Views/Resume/Index.cshtml
+++ b/Portfolio/Views/Resume/Index.cshtml
@@ -4,6 +4,7 @@
 
 @section article {
     <article  id="resume" class="grid_12">
+        <a href="@Url.Content("~/Content/Files/dpoindexter-resume.pdf")" class="btn" style="float: right; margin-top: 20px;">Download .pdf</a>
         <h2>Résumé</h2>
 
         <!--<p class="address">(832) 626-2125 • <a href="mailto:daniel@danielpoindexter.com">daniel@danielpoindexter.com</a> • 3720 W. Alabama St. #5317 • Houston, TX 77027</p>-->
@@ -14,7 +15,7 @@
         <table class="resume">
             <tr>
                 <td class="position">
-                    6/2011 – 10/2011<br/>
+                    <strong>6/2011 – 10/2011</strong><br/>
                     GE Energy<br/>
                     Houston, TX
                 </td>
@@ -33,7 +34,7 @@
             </tr>
             <tr>
                 <td class="position">
-                    3/2010 – 6/2011<br/>
+                    <strong>3/2010 – 6/2011</strong><br/>
                     RegStep<br/>
                     Austin, TX
                 </td>
@@ -55,7 +56,7 @@
             </tr>
             <tr>
                 <td class="position">
-                    9/2007 – 3/2010<br/>
+                    <strong>9/2007 – 3/2010</strong><br/>
                     Registration Assistant<br/>
                     Austin, TX
                 </td>
@@ -71,7 +72,7 @@
             </tr>
             <tr>
                 <td class="position">
-                    2/2005 – 9/2007<br/>
+                    <strong>2/2005 – 9/2007</strong><br/>
                     Registration Assistant<br/>
                     Austin, TX
                 </td>
@@ -90,12 +91,12 @@
         <table class="resume">
             <tr>
                 <td class="position">
-                    2002-2007<br/>
-                    UT Austin
+                    <strong>2002-2007</strong><br/>
+                    University of Texas at Austin
                 </td>
                 <td class="description">
                     <h4>Bachelor of Science – Communications	</h4>
-                    Major: Radio/Television/Film
+                    <span>Major: Radio/Television/Film</span>
                 </td>
             </tr>
         </table>
@@ -124,7 +125,7 @@
                     <h3>References</h3>
                 </td>
                 <td class="description">
-                    Available upon request
+                    <span>Available upon request</span>
                 </td>
             </tr>
         </table>  
