Add Authorize attribute to Projects controller. Apply basic styling to Account pages

--- a/Portfolio/Views/Account/ChangePasswordSuccess.cshtml
+++ b/Portfolio/Views/Account/ChangePasswordSuccess.cshtml
@@ -2,7 +2,11 @@
     ViewBag.Title = "Change Password";
 }
 
-<h2>Change Password</h2>
-<p>
-    Your password has been changed successfully.
-</p>
+@section article {
+<article class="grid_12">
+    <h2>Change Password</h2>
+    <p>
+        Your password has been changed successfully.
+    </p>
+</article>
+}
