Edit About text. Normalize page titles

--- a/Portfolio/Views/About/Index.cshtml
+++ b/Portfolio/Views/About/Index.cshtml
@@ -1,5 +1,5 @@
 ﻿@{
-    ViewBag.Title = "About Me";
+    ViewBag.Title = "About | Daniel Poindexter";
 }
 
 @section article {
@@ -7,9 +7,10 @@
 <article id="about" class="grid_12">
     <h2>About Me</h2>
     <section class="grid_8" id="description">
-        <p>I'm a web application generalist. I've got a good bead on every level of the web development process, from database to visual design, but ask me to write an installable program, and I'm going to scratch my head. I didn't learn to program via a Computer Science degree, I learned it by experience and necessity and love. Which sounds vaguely superior, but is really just to say that my domain knowledge is a mile wide and an inch deep. Like I said, a generalist.</p>
-        <p>I love web applications. It's wonderful to be able to take an idea from conception to finished, working product, and end up with something that looks good and behaves well. I have a particular crush on responsive, single-page applications that make heavy use of Javascript for seamless interaction.</p>
-        <p>I helped to found a company in 2009. Although my partners and I eventually parted ways, it was an amazing experience that taught me bundles. I'm pretty good at grasping the big-picture reasons for doing things, and finding ways to execute them on my own. If there's one problem with that, it's that I haven't yet had the opportunity to work with a full product team. I'm excited to get to work hand-in-hand with other great designers and developers, rather than being a lone technology wolf.</p>
+        <p>I don't actually wear glasses. I like sports, in fact. But it's fun to play off the popular perception of my name.</p>
+        <p>I've done a little bit of everything at every layer of the web stack &ndash; in fact, I've really only programmed for the web. So I'm working to get a handle on computer science theory right now. I came into this industry as a visual designer, so I didn't expect to fall in love with programming and be reading about linked lists and big-O notation on Wikipedia in the middle of the night. My domain knowledge when it comes to web apps is helpfully broad but sometimes irritatingly shallow.</p>
+        <p>I love being able to plan, design and build a great-looking application from the ground up. I especially like the new trend of responsive apps with Javascript-y frontends driven by lean, API-style backends.</p>
+        <p>I helped found a company in 2009. Although my partners and I parted ways, it was an amazing experience that taught me bundles. I think it's impossible to start a company and come away from the experience without a much better understanding of the big picture. I was the sole technical guy, so I still haven't had a chance to work with a great team of programmers and designers. I think that's what I'm most looking forward to doing next.</p>
     </section>
     <section class="grid_4" id="overview">
         <dl>
@@ -19,6 +20,8 @@
             <dd><a href="mailto:daniel@danielpoindexter.com">daniel@danielpoindexter.com</a></dd>
             <dt>Phone</dt>
             <dd>(832) 626-2125</dd>
+            <dt>LinkedIn</dt>
+            <dd><a href="http://www.linkedin.com/in/dpoindexter" target="_blank">linkedin.com/in/dpoindexter</a></dd>
             <dt>Disciplines</dt>
             <dd>
                 <span class="tag">Web Application Development</span>
