--- a/Portfolio/Views/Work/Project.cshtml
+++ b/Portfolio/Views/Work/Project.cshtml
@@ -2,6 +2,7 @@
 @model Portfolio.Models.Project
            
 @{
+    ViewBag.Title = @Model.Name + " | Projects | Daniel Poindexter";
     var markdown = new Markdown();
 }
 
