Replace body and headings type with google fonts. Replace inline HTML5 shim with google cdn version

--- a/Portfolio/Views/Shared/_Layout.cshtml
+++ b/Portfolio/Views/Shared/_Layout.cshtml
@@ -7,17 +7,7 @@
     <link rel="stylesheet" href="@Url.Content("~/Content/bootstrap/bootstrap.css")">
     <link href="@Url.Content("~/content/main.css")" rel="stylesheet" type="text/css"/>
     <!--[if lt IE 9]>
-    <script type="text/javascript">
-        document.createElement('header');
-        document.createElement('nav');
-        document.createElement('section');
-        document.createElement('article');
-        document.createElement('aside');
-        document.createElement('footer');
-        document.createElement('hgroup');
-        document.createElement('figure');
-        document.createElement('figcaption');
-    </script>
+    <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
     @RenderSection("styles", required: false)
 </head>
