--- a/Portfolio/Content/main.css
+++ b/Portfolio/Content/main.css
@@ -278,7 +278,7 @@ a#gallery-next.inactive {
 =========================================================================*/
 
 #description p {
-    font-size: 1.4em;
+    font-size: 1.6em;
     margin: 0 0 1em 20px;
 }
 
@@ -322,7 +322,7 @@ section#description {
 
 footer p {
     float: right;
-    font-size: 1.3em;
+    font-size: 1.4em;
     line-height: 1em;
     margin-top: 0;
 }
@@ -341,7 +341,7 @@ footer p {
 
 p.summary {
     margin: 20px 0 20px 20px;
-    font-size: 1.4em;
+    font-size: 1.6em;
 }
 
 table.resume {
@@ -382,6 +382,7 @@ table.resume {
 .resume td.description {
     color: #444;
     padding: 10px 0 0 10px;
+    font-size: 14px;
     font-size: 1.1em;
     line-height: 1.3em;
 }
@@ -395,13 +396,14 @@ table.resume {
     padding: 0;
     line-height: 1em;   
     text-transform: none;
+    font-size: 1.6em;
 }
 
 .resume h4 {
     margin: 0;
     padding: 0 0 10px 0;
     line-height: 1em;
-    font-size: 1em;
+    font-size: .9em;
     text-transform: uppercase;
 }
 
@@ -411,7 +413,6 @@ table.resume {
 
 #resume li {
     color: #444;
-    font-size: 1em;
     padding-bottom: 10px;
     line-height: 1.4em;
 }
