--- a/Portfolio/Content/main.css
+++ b/Portfolio/Content/main.css
@@ -127,6 +127,10 @@ a:hover {
     text-shadow: #333 1px 1px 1px;
 }
 
+ul {
+    list-style: disc;   
+}
+
 
 /* Grid/layout adjustments 
 =========================================================================*/
@@ -299,7 +303,9 @@ section#description {
 #project h4 {
     background: url(../img/elements/horizontal-dash.png) repeat-x left bottom;
     padding-left: 20px;
-    margin-bottom: 10px; 
+    margin-bottom: 10px;
+    font-size: 1.6em;
+    line-height: 1.875;
 }
 
 /* About page-specific files
@@ -415,9 +421,5 @@ table.resume {
     color: #444;
     padding-bottom: 10px;
     line-height: 1.4em;
-}
-
-td.position strong {
-    font-weight: bold;
 }
 
